Changelog
=========

2.2.7 (unreleased)
------------------

- Nothing changed yet.


2.2.6 (2013-01-17)
------------------

- Raise with of id input fields in ZMI from 30 to 80, so that browser reource
  ids can be shown as whole.
  [thet]

- Fixed spurious test failures for Expires being off by one second.
  [maurits]


2.2.5 (2013-01-13)
------------------

- Detect when CSS configuration will cause them to be marked as alternate
  by browsers and warn the user.
  [MatthewWilkes]


2.2.4 (2012-12-09)
------------------

- Add some space between up/down and remove links in ZMI
  [maartenking]

2.2.3 (2012-10-16)
------------------

- Don't break if the site doesn't have a portal_kss registry.
  [davisagli]


2.2.2 (2012-08-29)
------------------

- Changed deprecated getSiteEncoding to hardcoded `utf-8`
  [tom_gross]

2.2.1 (2012-08-11)
------------------

- Make it possible to change the default bundles for a theme by
  assigning bundles to '(default)'
  [davisagli]

2.2 (2012-07-02)
----------------

- Change BaseRegistryTool.deferredGetContent method to use
  OFS.File.update_data instead of OFS.File.manage_upload. The
  manage_upload method is a "ZMI" API.  By calling manage_upload
  an ObjectModifiedEvent would be generated for every resource
  served from the registry.  Let's do less work.
  [runyaga]

2.1.2 (2012-05-25)
------------------

- Fix test failure under Plone 4.2.
  [hannosch]

- using hashlib.md5 (fixing a deprecation warning)
  [ajung]


2.1.1 (2012-05-07)
------------------

- Added theme-parameter for getResourceContent for JavaScriptRegistry.
  Even if it is unused it now allows the same arguments as the
  BaseRegistry
  [tom_gross]

- Added support for OFS.Image.File-objects using OFS.Image.PData
  This fixes https://dev.plone.org/ticket/12479
  [datakurre]

2.1 (2012-04-18)
----------------

- Use iterative magic number generation based on the properties of all
  included resources (for each concatenated resource).
